--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <style>
       body {
         font-family: 'Lato', sans-serif;
+        background-color: #0c0a09; /* A fallback color */
+        background-image: url('https://ik.imagekit.io/j1fgksdwx/bar%20image.jpg?updatedAt=1758273475378');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
       }
       .font-serif-display {
         font-family: 'Cormorant Garamond', serif;
